打印出库单

--- a/core/app/views/Outbounds/index.html
+++ b/core/app/views/Outbounds/index.html
@@ -61,9 +61,9 @@
     <div class="row-fluid">
       <div class="span12">
         <div class="inline">
-          <a href="javascript:void(0)" class="btn btn btn-info" id="confirmOutboundBtn">确认出库</a>
-          <a href="javascript:void(0)" data-url="@{Inbounds.blank()}" class="btn btn-primary inline"
-             id="createInboundBtn">导出</a>
+          <a href="javascript:void(0)" class="btn btn-primary" id="confirmOutboundBtn">确认出库</a>
+          <a class="btn btn-info" href="javascript:void(0)" id="printBtn" target="_blank">
+            <i class="icon-print"></i> 打印出库单</a>
         </div>
       </div>
     </div>
