--- a/core/app/views/Sellings/_amazon.html
+++ b/core/app/views/Sellings/_amazon.html
@@ -99,7 +99,7 @@
         ck:false, unitname:'p.productWeightUnit', checkboxname: 'p.productWeight',name: 'p.proWeight',
         label: '重量(产品)', value: s.listing.product.productWeight /}
         #{checkbox_product_weight readonly:true,sid:'sweight',hid:'hweight', id:'weight',unitname:'p.weightUnit',
-        ck:false, checkboxname: 'p.weight',name: 'p.packWeight',label: '重量(包材)', value: s.listing.product.weight /}
+        ck:true, checkboxname: 'p.weight',name: 'p.packWeight',label: '重量(包材)', value: s.listing.product.weight /}
 
       <label class="control-label" for="sellingCycle">生命周期</label>
 
