*  修正 pro.whouseAttrs.whProductName input 数据读取的错误

--- a/core/app/views/Products/_whouseAttrsForm.html
+++ b/core/app/views/Products/_whouseAttrsForm.html
@@ -25,8 +25,7 @@
       <tr>
         <td>产品规格</td>
         <td>
-          <textarea rows="6" name="pro.whouseAttrs.whFormat" title="产品规格" value="${pro.whouseAttrs.whFormat}"
-                    class="input-block-level"></textarea>
+          <textarea rows="6" name="pro.whouseAttrs.whFormat" title="产品规格" class="input-block-level">${pro.whouseAttrs.whFormat}</textarea>
         </td>
       </tr>
       <tr>
