出库单报表打印功能

--- a/core/app/views/Inbounds/printQuaternionForm.html
+++ b/core/app/views/Inbounds/printQuaternionForm.html
@@ -10,7 +10,7 @@
 </head>
 <body style="margin:0 0 0 0;">
 #{list items:ten.keySet().iterator(), as:'p'}
-    #{set first_o:ten.get(0).get(0) /}
+    #{set first_o:ten.get(p).get(0) /}
 <div style="margin:0 0 0 0; height:188mm;width:100%;">
   <table border="0" style="width:290mm;margin:0 0 0 0;">
     <tr style="text-align:center;height:8mm;">
