--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -41,7 +41,7 @@
         <select name="p.stage" class="inline" style="width:82px;">
           <option value="">阶段</option>
         #{list items:models.procure.ProcureUnit.STAGE.values(), as:'stage'}
-            #{if stage.label() != '审批中'}
+            #{if stage.name() != 'APPROVE' && stage.name() != 'PLAN'}
               <option ${stage == p.stage ? 'selected' : ''} value="${stage.name()}">${stage.label()}</option>
             #{/if}
         #{/list}
@@ -76,7 +76,7 @@
         </select>
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" style="width:300px;" class="input-medium" name="p.search" placeholder="sellingId or SKU"
+          <input type="text" style="width:300px;" class="input-medium" name="p.search" placeholder="出货单ID or sellingId or SKU"
                  value="${p.search}">
           <input type="hidden" name="p.page" value="${p.page}">
           <button class="btn btn-primary" data-loading>搜索</button>
@@ -115,7 +115,11 @@
     <div class="span12">
       <table class="table table-condensed table-bordered" id="unit_table">
         <tr>
-          <th><input type="checkbox"></th>
+          <th>
+            <label class="checkbox">
+              <input type="checkbox" id="checkbox_all" class="checkall">
+            </label>
+          </th>
           <th>采购计划ID</th>
           <th>阶段</th>
           <th width="45px;">操作</th>
@@ -129,6 +133,7 @@
           <th>出货单</th>
           <th width="100px;">数量<br>(计划/交货/入库)</th>
           <th rel="popover" content="<img src='/img/helper/fnsku.png' />" width="auto">FnSku</th>
+          <th>运输方式</th>
           <th width="140px;">时间<br>(预计交货/预计运输)</th>
           <th width="80px;">实际交货时间</th>
           <th>质检结果</th>
@@ -181,7 +186,7 @@
           <td>${unit.attrs.planQty} / ${unit.attrs.qty} / ${unit.inboundQty}</td>
           <td>
               #{if unit.selling?.fnSku}
-                <a href="@{ProcureUnits.fnSkuLable(unit.sid, false)}" target="_blank" class="btn btn-success">
+                <a href="@{ProcureUnits.fnSkuLable(unit.sid, false)}" target="_blank">
                   <i class="icon-download-alt"></i>${unit.selling.fnSku}
                 </a>
               #{/if}
@@ -191,6 +196,7 @@
                 </a>
               #{/elseif}
           </td>
+          <td style="color:${unit.shipType.rgb()}">${unit.shipType?.label()}</td>
           <td>
             预计交货:#{time_tooltip time:unit.attrs.planDeliveryDate/} <br>
             预计运输:#{time_tooltip time:unit.attrs.planShipDate /}
