*  删除多余的 title 标签

--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -19,7 +19,7 @@
   #{ifnot deliveryplan}
     <th>单价</th>
     <th rel="popover" content="如果交货, 数量为交货数量, 如果没有交货,则为计划采购数量">
-      <abbr title=" ">总价</abbr>
+      <abbr>总价</abbr>
     </th>
     <th>剩余请款金额</th>
   #{/ifnot}
