--- a/core/app/views/Inbounds/boxInfo.html
+++ b/core/app/views/Inbounds/boxInfo.html
@@ -19,10 +19,10 @@
   </tr>
   <tr>
     <td>
-      <input type='text' style='width: 30px;' name='unit.mainBox.boxNum' value='${unit.mainBox?.boxNum}'/>
+      <input type='text' style='width: 30px;' name='unit.mainBox.num' value='${unit.mainBox?.num}'/>
       <input type="hidden" name="unit.id" value="${unit.id}">
     </td>
-    <td><input type='text' style='width: 30px;' name='unit.mainBox.num' value='${unit.mainBox?.num}'/></td>
+    <td><input type='text' style='width: 30px;' name='unit.mainBox.boxNum' value='${unit.mainBox?.boxNum}'/></td>
     <td>
       <input type='text' style='width: 60px;' name='unit.mainBox.singleBoxWeight' value='${unit.mainBox?.singleBoxWeight}'/>
     </td>
