--- a/core/app/views/Outbounds/blank.html
+++ b/core/app/views/Outbounds/blank.html
@@ -155,12 +155,12 @@
             <td>${unit.fba?.shipmentId}</td>
             <td>#{time_tooltip time:unit.attrs.planShipDate /}</td>
             <td>${unit.availableQty}</td>
-            <td>${unit.outQty}</td>
+            <td>${unit.availableQty}</td>
             <td>
               <input type="button" class="btn btn-mini btn-success" data-id="${unit.id}" name="editBoxInfo" value="填写">
             </td>
-            <td></td>
-            <td></td>
+            <td>${unit.currWhouse?.name}</td>
+            <td>${unit.showInboundIds()}</td>
             <td>${unit.stage?.label()}</td>
           </tr>
         #{/list}
