--- a/core/app/views/Outbounds/edit.html
+++ b/core/app/views/Outbounds/edit.html
@@ -118,15 +118,25 @@
     </table>
   </div>
 </div>
-    #{info_row title:'已添加进入【出库单】的【采购单元】'/}
+#{/form}
+
+#{info_row title:'已添加进入【出库单】的【采购单元】'/}
 <div class="row-fluid">
   <div class="span12">
-      #{render 'Outbounds/_units.html', units:outbound.units, is_check: true/}
-      #{if outbound.status.name()=='Create'}
-        <button class="btn btn-danger">解除</button>
-      #{/if}
+  #{render 'Outbounds/_units.html', units:outbound.units, is_check: true/}
+  #{if outbound.status.name()=='Create'}
+    <button class="btn btn-danger" id="deleteBtn">解除</button>
+  #{/if}
   </div>
 </div>
 
-#{/form}
 
+<div id="fba_carton_contents_modal" class="modal hide fade" style="width:800px;">
+  <div class="modal-body">
+    <div id="refresh_div"></div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+    <a class="btn btn-primary" id="submitBoxInfoBtn" data-action="@{Inbounds.updateBoxInfo()}">提交</a>
+  </div>
+</div>
