--- a/core/app/views/Outbounds/index.html
+++ b/core/app/views/Outbounds/index.html
@@ -132,5 +132,14 @@
   </form>
 </div>
 
+<div id="fba_carton_contents_modal" class="modal hide fade" style="width:800px;">
+  <div class="modal-body">
+    <div id="refresh_div"></div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+    <a class="btn btn-primary" id="submitBoxInfoBtn" data-action="@{Inbounds.updateBoxInfo()}">提交</a>
+  </div>
+</div>
 
 
