--- a/core/app/views/Refunds/blank.html
+++ b/core/app/views/Refunds/blank.html
@@ -76,12 +76,17 @@
     </table>
   </div>
 </div>
-    #{info_row title:'已添加进入【退货单】的【采购单元】'/}
+#{/form}
+#{info_row title:'已添加进入【退货单】的【采购单元】'/}
 <div class="row-fluid">
   <div class="span12">
     <table class="table table-condensed table-bordered" id="unit_table">
       <tr>
-        <th width="20px;"><input type="checkbox"></th>
+        <th width="20px;">
+          <label class="checkbox">
+            <input type="checkbox" id="checkbox_all" class="checkall">
+          </label>
+        </th>
         <th style="width:60px;">采购计划</th>
         <th style="width:60px;">采购单</th>
         <th style="width:320px;">Selling</th>
@@ -96,43 +101,39 @@
         <th style="width:60px;">运输方式</th>
         <th style="width:45px;">阶段</th>
       </tr>
-        #{list items:units, as:'unit'}
-          <tr class="text-center">
-            <td>
-              <input type="checkbox" value="${unit.id}">
-              <input type="hidden" name="dtos[${unit_index-1}].unit.id" value="${unit.id}">
-            </td>
-            <td>${unit.id}</td>
-            <td>${unit.deliveryment?.id}</td>
-            <td>${unit.selling?.sellingId}</td>
-            <td>${unit.product?.sku}</td>
-            <td title="${unit.product?.abbreviation}">${unit.product?.abbreviation?.xxLong()}</td>
-            <td>${unit.fba?.shipmentId}</td>
-            <td>${unit.selling?.fnSku}</td>
-            <td>${unit.availableQty}</td>
-            <td>
-              <input type="text" style="width:40px;" name="dtos[${unit_index-1}].qty" value="${unit.availableQty}">
-              <input type="hidden" name="dtos[${unit_index-1}].planQty" value="${unit.availableQty}">
-            </td>
-            <td>
-              <input type="button" class="btn btn-mini btn-success" data-id="${unit.id}" name="editBoxInfo" value="填写">
-            </td>
-            <td>${unit.whouse?.name()}</td>
-            <td style="color:${unit.shipType?.rgb()}">${unit.shipType?.label()}</td>
-            <td style="background-color:${unit.stage.rgb()}">${unit.stage?.label()}</td>
-          </tr>
-        #{/list}
+    #{list items:units, as:'unit'}
+      <tr class="text-center">
+        <td>
+          <input type="checkbox" value="${unit.id}">
+          <input type="hidden" name="dtos[${unit_index-1}].unit.id" value="${unit.id}">
+        </td>
+        <td>${unit.id}</td>
+        <td>${unit.deliveryment?.id}</td>
+        <td>${unit.selling?.sellingId}</td>
+        <td>${unit.product?.sku}</td>
+        <td title="${unit.product?.abbreviation}">${unit.product?.abbreviation?.xxLong()}</td>
+        <td>${unit.fba?.shipmentId}</td>
+        <td>${unit.selling?.fnSku}</td>
+        <td>${unit.availableQty}</td>
+        <td>
+          <input type="text" style="width:40px;" name="dtos[${unit_index-1}].qty" value="${unit.availableQty}"
+                 data-origin="${unit.availableQty}">
+          <input type="hidden" name="dtos[${unit_index-1}].planQty" value="${unit.availableQty}">
+        </td>
+        <td>
+          <input type="button" class="btn btn-mini btn-success" data-id="${unit.id}" name="editBoxInfo" value="填写">
+        </td>
+        <td>${unit.whouse?.name()}</td>
+        <td style="color:${unit.shipType?.rgb()}">${unit.shipType?.label()}</td>
+        <td style="background-color:${unit.stage.rgb()}">${unit.stage?.label()}</td>
+      </tr>
+    #{/list}
     </table>
-    <button class="btn btn-danger">解除</button>
   </div>
 </div>
+<input type="button" class="btn btn-danger" id="deleteBtn" value="解除"/>
 
 <div id="fba_carton_contents_modal" class="modal hide fade" style="width:800px;">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3>FBA Carton Contents</h3>
-    <p class="muted">默认数据来源于供应商的产品</p>
-  </div>
   <div class="modal-body">
     <div id="refresh_div"></div>
   </div>
@@ -141,6 +142,4 @@
     <a class="btn btn-primary" id="submitBoxInfoBtn" data-action="@{Refunds.updateBoxInfo()}">提交</a>
   </div>
 </div>
-
-#{/form}
 
