--- a/core/app/views/Refunds/edit.html
+++ b/core/app/views/Refunds/edit.html
@@ -27,7 +27,7 @@
       </tr>
       <tr>
         <th>退货单名称<span style="color:red">*</span></th>
-        <td><input type="text" name="refund.name" class="input-xxlarge" value="${refund.name}"></td>
+        <td><input type="text" name="refund.name" class="input-xxlarge" value="${refund.name}" required></td>
         <th>供应商</th>
         <td>
           <input type="text" value="${refund.cooperator?.name}" readonly/>
@@ -47,8 +47,15 @@
       <tr>
         <th>制单人</th>
         <td>${refund.creator?.username}</td>
-        <th>仓库交接人<span style="color:red">*</span></th>
-        <td></td>
+        <th>仓库交接人</th>
+        <td>
+          <select name="refund.whouseUser.id" class="inline selectize" style="width:120px;">
+            <option value=""></option>
+              #{list items:users, as:'u'}
+                <option value="${u.id}" #{if refund.whouseUser?.id==u.id} selected #{/if}>${u.username}</option>
+              #{/list}
+          </select>
+        </td>
       </tr>
 
       <tr>
@@ -72,20 +79,17 @@
     </table>
   </div>
 </div>
-    #{info_row title:'已添加进入【退货单】的【采购单元】'/}
+#{/form}
+
+#{info_row title:'已添加进入【退货单】的【采购单元】'/}
 <div class="row-fluid">
   <div class="span12">
-      #{render '/Refunds/_units.html', units:refund.unitList, is_check:true/}
+  #{render '/Refunds/_units.html', units:refund.unitList, is_check:true/}
     <button class="btn btn-danger">解除</button>
   </div>
 </div>
 
 <div id="fba_carton_contents_modal" class="modal hide fade" style="width:800px;">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3>FBA Carton Contents</h3>
-    <p class="muted">默认数据来源于供应商的产品</p>
-  </div>
   <div class="modal-body">
     <div id="refresh_div"></div>
   </div>
@@ -94,6 +98,3 @@
     <a class="btn btn-primary" id="submitBoxInfoBtn" data-action="@{Inbounds.updateBoxInfo()}">提交</a>
   </div>
 </div>
-
-#{/form}
-
