--- a/core/app/views/Refunds/index.html
+++ b/core/app/views/Refunds/index.html
@@ -3,6 +3,7 @@
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
     #{script 'refunds/index.js'/}
+    #{script 'refunds/edit.es6'/}
 #{/set}
 <style>
   .table td{
@@ -123,6 +124,16 @@
       </table>
     </div>
   </form>
+</div>
+
+<div id="fba_carton_contents_modal" class="modal hide fade" style="width:800px;">
+  <div class="modal-body">
+    <div id="refresh_div"></div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+    <a class="btn btn-primary" id="submitBoxInfoBtn" data-action="@{Inbounds.updateBoxInfo()}">提交</a>
+  </div>
 </div>
 
 
