--- a/core/app/views/Outbounds/index.html
+++ b/core/app/views/Outbounds/index.html
@@ -52,7 +52,7 @@
 
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
-        <input type="text" class="input-medium" name="p.search" placeholder="sellingId or SKU" value="${p.search}">
+        <input type="text" style="width:200px;" name="p.search" placeholder="sellingId or SKU" value="${p.search}">
         <input type="hidden" name="p.page" value="${p.page}">
         <button class="btn btn-primary" data-loading>搜索</button>
       </div>
@@ -92,7 +92,7 @@
         </tr>
       #{list items: outbounds, as: 'o'}
         <tr>
-          <td><input type="checkbox" name="ids" value="${o.id}"></td>
+          <td><input type="checkbox" name="ids" value="${o.id}" status="${o.status.name()}"></td>
           <td><a href="@{Outbounds.edit(o.id)}">${o.id}</a></td>
           <td style="cursor:pointer;" data-toggle="toggle" data-target="#ptc_${o_index}">
             <span><i class="icon-reorder"></i></span>
