--- a/core/app/views/Refunds/blank.html
+++ b/core/app/views/Refunds/blank.html
@@ -48,7 +48,14 @@
         <th>制单人</th>
         <td>${refund.creator?.username}</td>
         <th>仓库交接人<span style="color:red">*</span></th>
-        <td></td>
+        <td>
+          <select name="refund.whouseUser.id" class="inline selectize" style="width:120px;">
+            <option value=""></option>
+              #{list items:users, as:'u'}
+                <option value="${u.id}" #{if refund.whouseUser?.id==u.id} selected #{/if}>${u.username}</option>
+              #{/list}
+          </select>
+        </td>
       </tr>
 
       <tr>
@@ -76,8 +83,7 @@
     </table>
   </div>
 </div>
-#{/form}
-#{info_row title:'已添加进入【退货单】的【采购单元】'/}
+    #{info_row title:'已添加进入【退货单】的【采购单元】'/}
 <div class="row-fluid">
   <div class="span12">
     <table class="table table-condensed table-bordered" id="unit_table">
@@ -101,36 +107,37 @@
         <th style="width:60px;">运输方式</th>
         <th style="width:45px;">阶段</th>
       </tr>
-    #{list items:units, as:'unit'}
-      <tr class="text-center">
-        <td>
-          <input type="checkbox" value="${unit.id}">
-          <input type="hidden" name="dtos[${unit_index-1}].unit.id" value="${unit.id}">
-        </td>
-        <td>${unit.id}</td>
-        <td>${unit.deliveryment?.id}</td>
-        <td>${unit.selling?.sellingId}</td>
-        <td>${unit.product?.sku}</td>
-        <td title="${unit.product?.abbreviation}">${unit.product?.abbreviation?.xxLong()}</td>
-        <td>${unit.fba?.shipmentId}</td>
-        <td>${unit.selling?.fnSku}</td>
-        <td>${unit.availableQty}</td>
-        <td>
-          <input type="text" style="width:40px;" name="dtos[${unit_index-1}].qty" value="${unit.availableQty}"
-                 data-origin="${unit.availableQty}">
-          <input type="hidden" name="dtos[${unit_index-1}].planQty" value="${unit.availableQty}">
-        </td>
-        <td>
-          <input type="button" class="btn btn-mini btn-success" data-id="${unit.id}" name="editBoxInfo" value="填写">
-        </td>
-        <td>${unit.whouse?.name()}</td>
-        <td style="color:${unit.shipType?.rgb()}">${unit.shipType?.label()}</td>
-        <td style="background-color:${unit.stage.rgb()}">${unit.stage?.label()}</td>
-      </tr>
-    #{/list}
+        #{list items:units, as:'unit'}
+          <tr class="text-center">
+            <td>
+              <input type="checkbox" value="${unit.id}">
+              <input type="hidden" name="dtos[${unit_index-1}].unit.id" value="${unit.id}">
+            </td>
+            <td>${unit.id}</td>
+            <td>${unit.deliveryment?.id}</td>
+            <td>${unit.selling?.sellingId}</td>
+            <td>${unit.product?.sku}</td>
+            <td title="${unit.product?.abbreviation}">${unit.product?.abbreviation?.xxLong()}</td>
+            <td>${unit.fba?.shipmentId}</td>
+            <td>${unit.selling?.fnSku}</td>
+            <td>${unit.availableQty}</td>
+            <td>
+              <input type="text" style="width:40px;" name="dtos[${unit_index-1}].qty" value="${unit.availableQty}"
+                     data-origin="${unit.availableQty}">
+              <input type="hidden" name="dtos[${unit_index-1}].planQty" value="${unit.availableQty}">
+            </td>
+            <td>
+              <input type="button" class="btn btn-mini btn-success" data-id="${unit.id}" name="editBoxInfo" value="填写">
+            </td>
+            <td>${unit.whouse?.name()}</td>
+            <td style="color:${unit.shipType?.rgb()}">${unit.shipType?.label()}</td>
+            <td style="background-color:${unit.stage.rgb()}">${unit.stage?.label()}</td>
+          </tr>
+        #{/list}
     </table>
   </div>
 </div>
+#{/form}
 <input type="button" class="btn btn-danger" id="deleteBtn" value="解除"/>
 
 <div id="fba_carton_contents_modal" class="modal hide fade" style="width:800px;">
