出货单关联收货创建逻辑调整

--- a/core/app/views/DeliverPlans/indexWhouse.html
+++ b/core/app/views/DeliverPlans/indexWhouse.html
@@ -4,6 +4,11 @@
     #{script 'component/pagination.coffee'/}
     #{script 'deliveryments/index.es6'/}
 #{/set}
+<style>
+  .table td{
+    vertical-align:middle;
+  }
+</style>
 
 #{flash_alert /}
 #{errorMsgs /}
