--- a/core/app/views/Orders/_invoice.html
+++ b/core/app/views/Orders/_invoice.html
@@ -12,16 +12,6 @@
       border:0px solid #000000;
     }
 
-    .tr1{
-      font:18px bold;
-      background-color:#9c9c9c;
-
-    }
-
-    .tr2{
-      height:50px;
-    }
-
     .td1{
       width:50%;
       text-align:left;
@@ -52,44 +42,29 @@
       border:1px solid;
       text-align:center;
     }
-
-    .div1{
-      border-bottom:0px;
-      padding-left:0px;
-      width:99.7%;
-      height:100px;
-    }
-
-    .div2{
-      text-align:right;
-      padding-top:20px;
-      width:99.7%;
-    }
   </style>
 </head>
 <body>
-
-
 <form action="@{Orders.invoicepdf()}" method="post" id="create_invoice_form" target="_blank">
+#{set market: ord.market.name()/}
+#{set rate: ord.orderrate()/}
   <table cellpadding="4px" style="width:70%" cellspacing="0" align='center'>
     <input type="hidden" name="invoice.orderid" value="${ord.orderId}">
     <tr>
       <td class="td1">
         <input type="hidden" name="invoice.isreturn" value="0">
-
         <div class="${_row ? 'row' : 'row-fluid'}" style="margin-top:5px;max-height:200px;overflow:auto;margin-bottom:20px">
           <div class="span12">
-          #{if records!=null && records.size()>0 }
+          #{if records && records.size() > 0 }
             <p class="text-info">${records.get(0).record().raw()}</p>
           #{/if}
           </div>
         </div>
-
         <select name="invoice.europevat" style="width:120px;">
         #{list items:models.market.OrderInvoice.VAT.values(), as:'v'}
-            #{if !(ord.market==models.market.M.AMAZON_UK && v==models.market.OrderInvoice.VAT.EUROPE)}
-              <option ${v==invoice?.europevat ? 'selected' : ''} value="${v}">${v.label()}</option>
-            #{/if}
+            #{ifnot market == 'AMAZON_UK' && v == models.market.OrderInvoice.VAT.EUROPE}
+              <option ${v == invoice?.europevat ? 'selected' : ''} value="${v}">${v.label()}</option>
+            #{/ifnot}
         #{/list}
         </select>
       </td>
@@ -98,44 +73,35 @@
     </tr>
     <tr>
       <td class="td1">
-        <strong><font style="font-weight: bold;" size="4pt">${invoiceformat.title} #: ${ord.orderId}</font>
+        <strong>
+          <font style="font-weight: bold;" size="4pt">${invoiceformat.title} #: ${ord.orderId}</font>
         </strong><br>
-      ${invoiceformat.date}: ${new org.joda.time.DateTime(ord.createDate).toString("dd/MM/yyyy")}
+      ${invoiceformat.date}: ${ord.euDate()}
       </td>
       <td rowspan="1" class="td2" style="vertical-align:bottom;">
-        #{if (ord.market==models.market.M.AMAZON_ES || ord.market==models.market.M.AMAZON_UK ) ||
-        (ord.market==models.market.M.AMAZON_IT && invoice?.europevat==models.market.OrderInvoice.VAT.EUROPE)}
-          <img src="${System.getenv(helper.Constant.ROOT_URL)}/images/common/easyacc_logo.png" style="height:100%;
-              width:80%">
-        #{/if}
-        #{if (ord.market==models.market.M.AMAZON_DE) || (ord.market==models.market.M.AMAZON_FR) ||
-        (ord.market==models.market.M.AMAZON_IT && (invoice==null|| invoice.europevat!=models.market.OrderInvoice.VAT.EUROPE))}
-          <img src="${System.getenv(helper.Constant.ROOT_URL)}/images/common/easyacc_logo.png" style="height:100%;
-              width:80%">
-        #{/if}
+      #{if ord.canBeProvidedInvoice()}
+        <img src="${System.getenv(helper.Constant.ROOT_URL)}/images/common/easyacc_logo.png" style="height:100%;width:80%">
+      #{/if}
       </td>
     </tr>
-
     <tr>
       <td class="td4">
         <strong>${invoiceformat.to}</strong> <br>
-      #{if invoice != null}
-        <input style="width:100%" type="text" id="invoiceto" name="invoice.invoiceto" value="${invoice.invoiceto.replace("DE","Deutschland")}">
+      #{if invoice}
+        <input style="width:100%" type="text" id="invoiceto" name="invoice.invoiceto" value="${invoice.formatStr(invoice.invoiceto)}">
       #{/if}
       #{else}
-          #{if ord.address1!=null && ord.address1.length()>0}
-            <input style="width:100%" type="text" id="invoiceto" name="invoice.invoiceto" value="${ord.reciver+","+ord.address1
-            .replace("DE","Deutschland")}">
+          #{if ord.address1 && ord.address1.length() > 0}
+            <input style="width:100%" type="text" id="invoiceto" name="invoice.invoiceto" value="${ord.formatAddress1()}">
           #{/if}
           #{else}
             <input style="width:100%" type="text" id="invoiceto" name="invoice.invoiceto" value="${editaddress}">
           #{/else}
       #{/else}
-
       </td>
       <td class="td2">
         <strong>${invoiceformat.from}</strong><br>
-      #{if ord.market==models.market.M.AMAZON_IT && invoice!=null && invoice.europevat==models.market.OrderInvoice.VAT.EUROPE}
+      #{if market == 'AMAZON_IT' && invoice?.isEurope()}
       ${invoiceformat.fromeurinfo1} <br>
       ${invoiceformat.fromeurinfo2} <br>
       ${invoiceformat.fromeurinfo3}<br>
@@ -156,9 +122,10 @@
       </td>
     </tr>
     <tr>
-      <td class="td4"><strong>${invoiceformat.address}</strong><br>
-      #{if invoice != null}
-        <input style="width:100%" type="text" id="address" name="invoice.address" value="${invoice.address.replace("DE","Deutschland")}">
+      <td class="td4">
+        <strong>${invoiceformat.address}</strong><br>
+      #{if invoice}
+        <input style="width:100%" type="text" id="address" name="invoice.address" value="${invoice.formatStr(invoice.address)}">
       #{/if}
       #{else}
         <input style="width:100%" type="text" id="address" name="invoice.address" value="${editaddress}">
@@ -169,106 +136,101 @@
   </table>
   <table class="table1" cellpadding="8px" style="width:70%" cellspacing="0" align='center'>
     <tr>
-      <td class="td3"><strong>${invoiceformat.itemname}</strong></td>
-      <td class="td3"><strong>${invoiceformat.qty}</strong></td>
-      <td class="td3"><strong>${invoiceformat.price}</strong></td>
-      <td class="td3"><strong>${invoiceformat.itemamount}</strong></td>
+      <td class="td3">
+        <strong>${invoiceformat.itemname}</strong>
+      </td>
+      <td class="td3">
+        <strong>${invoiceformat.qty}</strong>
+      </td>
+      <td class="td3">
+        <strong>${invoiceformat.price}</strong>
+      </td>
+      <td class="td3">
+        <strong>${invoiceformat.itemamount}</strong>
+      </td>
     </tr>
-
-
   #{list items:ord.items, as:'item'}
     <tr>
-      <td class="td3" style="width:50%">${item.listingName}</td>
+      <td class="td3" style="width:50%">
+      ${item.listingName}
+      </td>
       <td class="td3">${item.quantity}</td>
-
-        #{if invoice != null}
-            #{if invoice.europevat==models.market.OrderInvoice.VAT.EUROPE}
+        #{if invoice}
+            #{if invoice.isEurope()}
               <td class="td3">
-                  #{if item.quantity!=0}
-                    <input type="text" name="invoice.price" value="${new BigDecimal(item.price-item.discountPrice).divide(new BigDecimal
-                    (item.quantity),2,4)}">
-                  #{/if}
-                  #{else}
-                    <input type="text" name="invoice.price" value="0">
-                  #{/else}
+                <input type="text" name="invoice.price" value="${item.invoiceTotalPrice()}">
               </td>
-              <td class="td3">${new BigDecimal(item.price-item.discountPrice).setScale(2, 4).floatValue()}</td>
+              <td class="td3">${item.invoicePrice()}</td>
             #{/if}
             #{else}
-              <td class="td3"><input type="text" name="invoice.price" value="${invoice.price.get(item_index-1)}">
+                #{set price: invoice.price.get(item_index-1)/}
+              <td class="td3">
+                <input type="text" name="invoice.price" value="${price}">
               </td>
-              <td class="td3">${new BigDecimal(item.quantity).multiply(new BigDecimal(invoice.price.get(item_index-1)))
-              .setScale(2, 4).floatValue()}</td>
+              <td class="td3">${item.invoiceTotalPrice(price)}</td>
             #{/else}
         #{/if}
-        #{else }
-            #{if item.quantity!=0}
+        #{else}
+            #{if item.quantity != 0}
               <td class="td3">
-                <input type="text" name="invoice.price" value="${new BigDecimal(item.price-item.discountPrice).
-                divide(new BigDecimal(item.quantity),2,4).divide(new
-                BigDecimal(ord.orderrate()),2,
-                java.math.RoundingMode.HALF_DOWN)}"></td>
-              <td class="td3">${new BigDecimal(item.quantity).multiply(new BigDecimal(item.price-item.discountPrice).
-              divide(new BigDecimal(item.quantity),2,4).divide(new
-              BigDecimal(ord.orderrate()),2,
-              java.math.RoundingMode.HALF_DOWN)).setScale(2, 4).floatValue()}</td>
+                <input type="text" name="invoice.price" value="${item.invoicePrice(rate)}">
+              </td>
+              <td class="td3">${item.invoiceTotalPriceWithRate(rate)}</td>
             #{/if}
             #{else}
-              <td class="td3"><input type="text" name="invoice.price" value="0"></td>
+              <td class="td3">
+                <input type="text" name="invoice.price" value="0">
+              </td>
               <td>0</td>
             #{/else}
         #{/else}
     </tr>
   #{/list}
 
-  #{set feecount:ord.items.size()/}
+  #{set feeCount:ord.items.size()/}
   #{list items:ord.fees, as:'fee'}
-      #{if (fee.type.name=='shipping' || fee.type.name=='shippingcharge' || fee.type.name=='giftwrap') && fee.cost>0}
+      #{set typeName: fee.type?.name/}
+      #{if (typeName == 'shipping' || typeName == 'shippingcharge' || typeName == 'giftwrap') && fee.cost > 0}
         <tr>
-            #{if fee.type.name=='shipping' || fee.type.name=='shippingcharge' }
+            #{if typeName == 'shipping' || typeName == 'shippingcharge' }
               <td class="td3" style="width:50%">${invoiceformat.shipfee}</td>
             #{/if}
-            #{if fee.type.name=='giftwrap'}
+            #{if typeName == 'giftwrap'}
               <td class="td3" style="width:50%">${invoiceformat.giftwrapfee}</td>
             #{/if}
           <td class="td3">1</td>
-            #{if invoice != null}
-                #{if invoice.europevat==models.market.OrderInvoice.VAT.EUROPE}
+            #{if invoice}
+                #{if invoice.isEurope()}
                   <td class="td3">
                     <input type="text" name="invoice.price" value="${fee.cost}">
                   </td>
                   <td class="td3">${fee.cost}</td>
                 #{/if}
                 #{else}
-                  <td class="td3"><input type="text" name="invoice.price" value="${invoice.price.get(feecount)}">
+                  <td class="td3">
+                    <input type="text" name="invoice.price" value="${invoice.price.get(feeCount)}">
                   </td>
-                  <td class="td3">${invoice.price.get(feecount)}</td>
+                  <td class="td3">${invoice.price.get(feeCount)}</td>
                 #{/else}
-                #{set feecount:feecount+1/}
+                #{set feeCount: feeCount + 1/}
             #{/if}
             #{else }
-              <td class="td3"><input type="text" name="invoice.price" value="${new BigDecimal(fee.cost).divide(new
-              BigDecimal(ord.orderrate()),2,
-              java.math.RoundingMode.HALF_DOWN)}"></td>
-              <td class="td3">${new BigDecimal(fee.cost).divide(new
-              BigDecimal(ord.orderrate()),2,
-              java.math.RoundingMode.HALF_DOWN).setScale(2, 4).floatValue()}</td>
+              <td class="td3">
+                <input type="text" name="invoice.price" value="${fee.invoiceCost(rate)}">
+              </td>
+              <td class="td3">${fee.invoiceScaleCost(rate)}</td>
             #{/else}
         </tr>
       #{/if}
   #{/list}
-
-
-
-
-
-
     <tr>
       <td class="td3"></td>
       <td class="td3"></td>
-      <td class="td3"><strong>${invoiceformat.notaxamount}</strong></td>
-    #{if invoice != null}
-        #{if invoice.europevat==models.market.OrderInvoice.VAT.EUROPE}
+      <td class="td3">
+        <strong>${invoiceformat.notaxamount}</strong>
+      </td>
+    #{if invoice}
+        #{if invoice.isEurope()}
           <td class="td3"><input type="text" name="invoice.notaxamount" value="${totalamount}"></td>
         #{/if}
         #{else}
@@ -282,32 +244,40 @@
     <tr>
       <td class="td3"></td>
       <td class="td3"></td>
-    #{if invoice?.europevat==models.market.OrderInvoice.VAT.EUROPE}
-      <td class="td3"><strong>${invoiceformat.taxamount}</strong></td>
+    #{if invoice?.isEurope()}
+      <td class="td3">
+        <strong>${invoiceformat.taxamount}</strong>
+      </td>
       <td class="td3">0.00</td>
     #{/if}
     #{else}
-      <td class="td3"><strong>${invoiceformat.taxamountper}</strong></td>
-        #{if invoice != null}
+      <td class="td3">
+        <strong>${invoiceformat.taxamountper}</strong>
+      </td>
+        #{if invoice}
           <td class="td3"><input type="text" name="invoice.taxamount" value="${invoice.taxamount}"></td>
         #{/if}
         #{else}
           <td class="td3"><input type="text" name="invoice.taxamount" value="${tax}"></td>
         #{/else}
-
     #{/else}
     </tr>
     <tr>
       <td class="td3"></td>
       <td class="td3"></td>
-      <td class="td3"><strong>${invoiceformat.totalamount}</strong></td>
-    #{if invoice != null}
-      <td class="td3"><input type="text" name="invoice.totalamount" value="${invoice.totalamount}"></td>
+      <td class="td3">
+        <strong>${invoiceformat.totalamount}</strong>
+      </td>
+    #{if invoice}
+      <td class="td3">
+        <input type="text" name="invoice.totalamount" value="${invoice.totalamount}">
+      </td>
     #{/if}
     #{else}
-      <td class="td3"><input type="text" name="invoice.totalamount" value="${totalamount}"></td>
+      <td class="td3">
+        <input type="text" name="invoice.totalamount" value="${totalamount}">
+      </td>
     #{/else}
-
     </tr>
     <tr>
       <td class="td1" colspan="4">
@@ -316,8 +286,6 @@
     </tr>
   </table>
 </form>
-
 #{records records:records/}
-
 </body>
 </html>
